# ohtu-palautusrepositorio

./: README.md
viikko1/nhl-statistics-1/src/: index.py  statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_tests.py
viikko2/: tiedostoja.txt
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko3/hello-robot/src/: CounterLibrary.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko3/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/: pyproject.toml
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/tdd-ostoskori/src/: ostoskori.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: index.py  int_joukko.py
viikko5/int-joukko/src/tests/: int_joukko_test.py
viikko5/laskin/src/: index.py  kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/: pyproject.toml
viikko5/tennis/src/: tennis_game.py
viikko5/tennis/src/tests/: tennis_game_test.py
viikko6/query-language/: pyproject.toml
viikko6/query-language/src/: index.py  matchers.py  player.py  player_reader.py  querybuilder.py  statistics.py
